user backend connected

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 ATLAS_URI=mongodb+srv://kraman82351:9GSe4uDJAJFRSX1L@cluster0.0lanvvt.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET= 1234567@aman
